# betteruv

./: .gitignore  README.md  main.py  pyproject.toml
challenge_repo/: README.md  pyproject.toml  requirements.inferred.txt
challenge_repo/scripts/: run_challenge.py
challenge_repo/src/challengeapp/: __init__.py  api.py  cloud_integrations.py  data_pipeline.py  documents.py  http_clients.py  orchestrator.py  settings.py
challenge_repo/src/sharedutils/: __init__.py  hashing.py
challenge_repo/tests/: test_orchestrator.py
demo_repo/: README.md  requirements.inferred.txt
demo_repo/scripts/: run_demo.py
demo_repo/src/sampleapp/: fetch.py  main.py
demo_repo/tests/: test_smoke.py
src/betteruv/: __main__.py
src/betteruv/ai/: __init__.py  failure_analyzer.py  groq_client.py  resolver_assistant.py  version_suggester.py
src/betteruv/classification/: import_classifier.py
src/betteruv/cli/: app.py
src/betteruv/core/: models.py  orchestrator.py
src/betteruv/install/: uv_backend.py
src/betteruv/knowledge/: alias_map.py
src/betteruv/knowledge/data/: import_to_package.json
src/betteruv/outputs/: requirements_writer.py
src/betteruv/parsing/: pyproject_parser.py  python_imports.py  requirements_parser.py
src/betteruv/repo/: inspector.py
src/betteruv/resolution/: candidate_mapper.py  package_utils.py  plan_builder.py  resolver.py  torch_family.py
src/betteruv/verify/: import_check.py  test_run.py
