[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "betteruv"
version = "0.1.0"
description = "Infer and install Python dependencies for repos with missing metadata"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.14.3",
  "httpx>=0.28.1",
  "pytest>=9.0.2",
  "python-dateutil>=2.9.0.post0",
  "python-dotenv>=1.2.2",
  "pyyaml>=6.0.3",
  "requests>=2.32.5",
  "sampleapp>=0.0.1",
  "typer>=0.12.0",
]

[project.scripts]
betteruv = "betteruv.cli.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
betteruv = ["knowledge/data/*.json"]
